--- a/Machine_Learning_Experiment_on_8_bit_Arduino.ipynb
+++ b/Machine_Learning_Experiment_on_8_bit_Arduino.ipynb
@@ -7,7 +7,6 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPjOz6oqnwRvd8/8hs6jgHH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,7 +85,7 @@
         "!wget -nv -r -O flex.csv https://raw.githubusercontent.com/DeqingSun/Machine-Learning-Experiment-on-8-bit-Arduino/master/sampleData/flex.csv\n",
         "!wget -nv -r -O punch.csv https://raw.githubusercontent.com/DeqingSun/Machine-Learning-Experiment-on-8-bit-Arduino/master/sampleData/punch.csv"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +152,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -253,7 +252,7 @@
         "\n",
         "print(\"Data set parsing and preparation complete.\")"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,7 +298,7 @@
         "\n",
         "print(\"Data set randomization and splitting complete.\")"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,7 +329,7 @@
         "model.compile(optimizer='rmsprop', loss='mse', metrics=['mae'])\n",
         "history = model.fit(inputs_train, outputs_train, epochs=200, batch_size=1, validation_data=(inputs_validate, outputs_validate))"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -769,7 +768,7 @@
         "\n",
         "print(plt.rcParams[\"figure.figsize\"])"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -815,7 +814,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -855,7 +854,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -898,7 +897,7 @@
         "#plt.plot(inputs_test, predictions, 'r.', label='Predicted')\n",
         "#plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -948,7 +947,7 @@
         "    weights = layer.get_weights()\n",
         "    print(weights)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1032,7 +1031,7 @@
         "  intermediate_output = intermediate_layer_model.predict(inputs_test[0:1,:])\n",
         "  print(intermediate_output)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1141,7 +1140,7 @@
         "#compare output of this cell to previous cell, they should be the same.\n",
         "#testFloatModelWithFixedSample should be the same as well."
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1201,7 +1200,7 @@
         "  print(\"const float layerBaisArray\"+str(j)+\"[] PROGMEM = { \"+(\", \".join([str(i) for i in layerBaisArrays[j]]))+\" };\")\n",
         "print(\"const float *const layerBaisArrays[] PROGMEM = {\"+(\", \".join([(\"layerBaisArray\"+str(i)) for i in range(layerCount)]))+\"};\")\n"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1301,7 +1300,7 @@
         "  for input_value in representativeDataset:\n",
         "    yield [[input_value]]"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1345,7 +1344,7 @@
         "tflite_model = converter.convert()\n",
         "open(\"arduino_model_quant_io.tflite\", \"wb\").write(tflite_model)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1401,7 +1400,7 @@
         "print(\"\\nDUMP OUTPUT\")\n",
         "print(interpreter.get_output_details()[0])\n"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1462,7 +1461,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1542,7 +1541,7 @@
       "source": [
         "interpreter.get_tensor_details() "
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1716,7 +1715,7 @@
         "     print(layer['index'],layer['name'],layer['quantization'],interpreter.get_tensor(layer['index']).shape)\n",
         "     print(interpreter.get_tensor(layer['index']))\n"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1822,11 +1821,11 @@
       "metadata": {
         "id": "XxFUzk4LUj5y",
         "colab_type": "code",
+        "outputId": "57fc9dab-1f5e-4d14-8603-4367d76603d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 127
-        },
-        "outputId": "57fc9dab-1f5e-4d14-8603-4367d76603d9"
+        }
       },
       "source": [
         "#use Netron viewer to understand model first, then adjust code to extract necessary data\n",
@@ -1911,14 +1910,14 @@
         "  else:\n",
         "      (q,shift) = math.frexp(realMultiplier)\n",
         "      q_fixed = int(q*(1<<31))\n",
-        "      if (q_fixed == (1 << 31)):\n",
+        "      if (q_fixed == (1 << 31)):  #make sure q is [1/2,1), to make sure reduced_multiplier is less or equal to 32768, fitting to int16\n",
         "        q_fixed /= 2;\n",
         "        shift+=1\n",
         "      if (shift < -31):\n",
         "        shift = 0;\n",
         "        q_fixed = 0;\n",
         "      quantized_multiplier = q_fixed\n",
-        "  reduced_multipliers[layerIndex] = (quantized_multiplier + (1 << 15)) >> 16;\n",
+        "  reduced_multipliers[layerIndex] = (quantized_multiplier + (1 << 15)) >> 16; #rounding\n",
         "  total_shifts[layerIndex] = 15 - shift;\n",
         "\n",
         "  inputZeroPoints[layerIndex] = inputZeroPoint\n",
@@ -1959,7 +1958,7 @@
         "    #print(s)\n",
         "    \n",
         "    x=s\n",
-        "    x = (x * reduced_multiplier) + (1 << (total_shift - 1));\n",
+        "    x = (x * reduced_multiplier) + (1 << (total_shift - 1));  #rounding\n",
         "    result = x >> total_shift\n",
         "    s=result\n",
         "    #print(s)\n",
@@ -1983,7 +1982,7 @@
         "#skip softmax because it is not important for getting most likely class\n",
         "\n"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2013,11 +2012,11 @@
       "metadata": {
         "id": "Y_cJKYmKrLLj",
         "colab_type": "code",
+        "outputId": "90f37047-b029-4d03-cc06-8a7796cab8a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 559
-        },
-        "outputId": "90f37047-b029-4d03-cc06-8a7796cab8a1"
+        }
       },
       "source": [
         "#generate header file for Arduino\n",
@@ -2050,7 +2049,7 @@
         "print(\"const int32_t reduced_multipliers\"+\"[] PROGMEM = { \"+(\", \".join([str(i) for i in reduced_multipliers]))+\" };\")\n",
         "print(\"const uint8_t total_shifts\"+\"[] PROGMEM = { \"+(\", \".join([str(i) for i in total_shifts]))+\" };\")"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
